# learngit

./: CMakeLists.txt  check_encoding.bat  learn1.txt  run_utf8.bat
include/: library_system.h  persistence.h  queue.h  reader.h  service.h  statistics.h  window.h
src/: main.c  persistence.c  queue.c  reader.c  service.c  statistics.c  window.c
